# SapphireFileServer

./: .gitignore  README.md
backend/: pyproject.toml
backend/scripts/: run.ps1  run.sh
backend/src/: core.py  fileExtensions.py  logger.py  main.py  server.py  staticFiles.py  test.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/plugins/: vuetify.js
frontend/src/: App.vue  fileIcons.js  main.js
