[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "preview-generator[all,cairosvg,libreoffice,video]>=0.29",
    "pymediainfo>=7.0.1",
    "sty>=1.0.6",
    "tinytag>=2.1.2",
    "tuspyserver>=4.2.3",
    "uvicorn>=0.35.0",
    "wsgidav>=4.3.3",
]
